<resources>
    <string name="app_name">EduConnect - Educational App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="notification">Notification</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="read_status">Read Status</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="videos">Videos</string>
    <string name="study_materials">Study Materials</string>
    <string name="chats">Chats</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="mobile_no">Mobile No</string>
    <string name="otp">OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="google_login">Google Login</string>
    <string name="mobile_login">Mobile Login</string>
    <string name="article_image">Article Image</string>
    <string name="chat">Chat</string>
    <string name="all_users">All Users</string>
    <string name="select_user">Select User</string>
    <string name="send">Send</string>
    <string name="articles">Articles</string>
    <string name="image_picker">Image Picker</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="thumb">Thumb</string>
    <string name="next">Next</string>
    <string name="verify">Verify</string>
    <string name="add_your_details">Add your details</string>
    <string name="login_by_phone_number">Login By Phone Number</string>
</resources>