<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ArticleActivity">

    <ImageView
        android:id="@+id/article_image"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:src="@color/material_dynamic_secondary30"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/article_image" />

    <ImageView
        android:id="@+id/back_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        android:background="@drawable/bg_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/title_article"
        style="@style/SecondaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/title"
        app:layout_constraintEnd_toStartOf="@+id/publishTime_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_image" />

    <TextView
        android:id="@+id/description_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        style="@style/SecondaryText"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_article"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/publishTime_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="01-02-2023"
        style="@style/SecondaryGrayText"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/article_image"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>