<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.EditProfileActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                style="@style/Icon"
                app:layout_constraintTop_toTopOf="@id/txtProfile"
                app:layout_constraintBottom_toBottomOf="@id/txtProfile"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/back" />

            <TextView
                android:id="@+id/txtProfile"
                style="@style/PrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </Toolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/profile_place_holder"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ProfileImageShape"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/image_picker"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="12dp"
        android:src="@drawable/ic_camera"
        android:background="@drawable/bg_send_btn"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        android:contentDescription="@string/image_picker" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:startIconDrawable="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:startIconDrawable="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        style="@style/SecondaryText"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/SecondaryText"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/save"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintBottom_toBottomOf="@id/save"/>


</androidx.constraintlayout.widget.ConstraintLayout>