<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MobileLoginActivity">

    <com.hbb20.CountryCodePicker
        app:ccp_defaultNameCode="IND"
        android:id="@+id/country_code"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:ccp_autoDetectCountry="true"
        app:ccp_showFlag="false"
        app:ccp_showFullName="false"
        app:ccp_showNameCode="false"
        app:layout_constraintTop_toTopOf="@id/phoneNo"
        app:layout_constraintBottom_toBottomOf="@id/phoneNo"
        app:layout_constraintStart_toStartOf="parent">
    </com.hbb20.CountryCodePicker>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country_code"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_phone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_no"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country_code"
        app:layout_constraintTop_toBottomOf="@id/phoneNo"
        app:startIconDrawable="@drawable/ic_password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_phone_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/otp" />

    <TextView
        android:id="@+id/txt_haveAnAccount_mobile_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_phone_login"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_login_moble_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/btn_phone_login"
        app:layout_constraintStart_toEndOf="@id/txt_haveAnAccount_mobile_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>