<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activity.fragment.ProfileFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/PrimaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_marginEnd="20dp"
            android:textAlignment="center" />

    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile_place_holder"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/ProfileImageShape"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/name_profile"
            style="@style/SecondaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:maxLines="1"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@id/profile_image_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_image_profile"
            app:layout_constraintTop_toTopOf="@id/profile_image_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/gray"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/profile_layout"/>

    <LinearLayout
        android:id="@+id/ll_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/view">

        <TextView
            android:id="@+id/txt_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification"
            style="@style/SecondaryText"/>

        <Switch
            android:id="@+id/switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:trackTint="@color/blue"
            android:thumbTint="@color/blue"
            android:checked="true"
            android:clickable="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_darkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/ll_notification">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_mode"
            style="@style/SecondaryText"/>

        <Switch
            android:id="@+id/switch_darkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:checked="false"
            android:clickable="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        style="@style/SecondaryText"
        android:textColor="@color/darkRed"
        android:background="@drawable/bg_logout_btn"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/ll_darkMode"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>